clusters/takeout/apps/common/ingress-nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend
  namespace: default
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: default-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: default-backend
    spec:
      containers:
      - name: default-backend
        image: docker.io/nginx:1.23.1 # {"$imagepolicy": "flux-system:default-backend"}
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - name: default-backend-html
          subPath: index.html
          mountPath: /usr/share/nginx/html/index.html
        resources:
          requests:
            cpu: "10m"
          limits:
            memory: "16Mi"
      volumes:
      - name: default-backend-html
        configMap:
          name: default-backend-html
